<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    tools:context=".RegisterForm">

    <TextView
        android:id="@+id/couserAppRegisterTitle"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:text="@string/register_form" />

    <EditText
        android:id="@+id/couserAppRegisterUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/username"
        android:layout_marginTop="40dp"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/couserAppRegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/password"
        android:ems="10"
        android:inputType="textPassword" />

    <CheckBox

        android:id="@+id/couserAppRegistercheckBoxTeacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:text="@string/teacher" />

    <CheckBox
        android:id="@+id/couserAppRegistercheckBoxStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/student" />

    <Button
        android:id="@+id/couserAppRegisterBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:text="@string/register" />



</LinearLayout>