<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    tools:context=".Teacher">

    <TextView
        android:id="@+id/couserAppTeacherTitle"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:text="@string/welcome_username" />

    <EditText
        android:id="@+id/couserAppTeacherSubject"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/subject"
        android:layout_marginTop="40dp"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/couserAppTeacherMassege"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:gravity="left"
        android:paddingLeft="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/massege"
        android:ems="10"
        android:inputType="textMultiLine"
         />

    <Button
        android:id="@+id/couserAppTeacherSaveBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:text="@string/save" />

</LinearLayout>